--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrepForge - The Complete Placement Preparation Platform</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -42,6 +43,7 @@
       <p>Track daily DSA, consistency, and placement readiness.</p>
     </div>
   </section>
+  
     <footer class="footer">
     <p>© 2025 PrepForge. All rights reserved.</p>
   </footer>
