--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">PrepForge</div>
+        <div class="logo">PrepForge
+            
+        </div>
         <div class="navlinks">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="blogs/index.html">Blogs</a>
             <a href="roadmaps/index.html">Roadmaps</a>
             <a href="coursses/index.html">Courses</a>
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
+            <a href="login.html" target="_blank">Login</a>
+            <a href="register.html" target="_blank">Register</a>
         </div>
     </nav>
   <section class="hero">
     <h1>Prepare Smart. Track Daily. Crack Placements.</h1>
     <p>PrepForge helps you stay consistent with structured guidance, courses, and daily tracking.</p>
+    <img src="/images/logo.png" id="prepforge">
     <div class="hero-buttons">
       <a href="register.html" class="btn-primary">Start Your Prep</a>
-      <a href="login.html" class="btn-outline">Login</a>
+      <a href="login.html" class="btn-primary">Login</a>
     </div>
   </section>
     <section class="pillars">
@@ -43,11 +46,12 @@
       <p>Track daily DSA, consistency, and placement readiness.</p>
     </div>
   </section>
-  
-    <footer class="footer">
+
+  <script src="main.js"></script>
+</body>
+
+  <footer class="footer">
     <p>© 2025 PrepForge. All rights reserved.</p>
   </footer>
-
-  <script src="js/main.js"></script>
-</body>
+    
 </html>
